[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-launches"
version = "0.1.0"
description = "Space launch data analysis project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "marimo",
    "pandas",
    "numpy",
    "polars",
    "requests",
    "matplotlib",
    "seaborn",
    "altair",
    "python-dateutil",
    "pytest",
    "tabulate",
    "ruff",
    "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:Converting to PeriodArray.*:UserWarning",
    "ignore:.*will drop timezone information.*:UserWarning",
]
